Fix HTML encoding issues in products.html

--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="img/logo.jpg" alt="Green Spark">
+          <img src="logo.jpg" alt="Green Spark">
           <span>Green Spark</span>
         </div>
         <ul>
@@ -67,7 +67,7 @@
   <div class="container grid" id="products">
     <!-- 1  Inertial Filter & Bleed Fan -->
     <div class="card">
-      <img src="img/inertial-filter.jpg" alt="Inertial Filter & Bleed Fan">
+      <img src="inertial-filter.jpg" alt="Inertial Filter & Bleed Fan">
       <h3>Inertial Filter & Bleed Fan</h3>
       <ul>
         <li>Self-cleaning air pre-filtration</li>
@@ -81,7 +81,7 @@
 
     <!-- 2  TUTCO Electric Duct Heaters -->
     <div class="card">
-      <img src="img/tutco-duct-heater.jpg" alt="TUTCO Electric Duct Heaters">
+      <img src="tutco-duct-heater.jpg" alt="TUTCO Electric Duct Heaters">
       <h3>TUTCO Electric Duct Heaters</h3>
       <ul>
         <li>UL 1996 listed (UL & ETL)</li>
@@ -95,7 +95,7 @@
 
     <!-- 3  GC Electric Duct Heaters -->
     <div class="card">
-      <img src="img/gc-duct-heater.jpg" alt="GC Electric Duct Heaters">
+      <img src="gc-duct-heater.jpg" alt="GC Electric Duct Heaters">
       <h3>GC Electric Duct Heaters</h3>
       <ul>
         <li>Manufactured to international standards</li>
@@ -109,7 +109,7 @@
 
     <!-- 4  DDC Control Panels -->
     <div class="card">
-      <img src="img/ddc-panel.jpg" alt="DDC Control Panels">
+      <img src="ddc-panel.jpg" alt="DDC Control Panels">
       <h3>DDC Control Panels</h3>
       <ul>
         <li>Precise HVAC control & automation</li>
@@ -201,3 +201,4 @@
   </script>
 </body>
 </html>
+
