Fix HTML encoding issues in products.html

--- a/products.html
+++ b/products.html
@@ -157,7 +157,7 @@
 
   <script>
     // 1.  CHANGE THIS TO YOUR OWN ADDRESS
-    const MY_EMAIL = "greenspark@gmail.com";
+    const MY_EMAIL = "greensparkengineer@gmail.com";
 
     const popup   = document.getElementById('enqPopup');
     const form    = document.getElementById('enqForm');
@@ -215,4 +215,5 @@
   </script>
 </body>
 </html>
+
 
