Fix HTML encoding issues in products.html

--- a/products.html
+++ b/products.html
@@ -93,7 +93,7 @@
       <button class="btn enquireBtn" data-product="TUTCO Electric Duct Heaters">Enquire Now</button>
     </div>
 
-    <!-- 3  GC Electric Duct Heaters -->
+    <!-- 3  GEC Electric Duct Heaters -->
     <div class="card">
       <img src="gc-duct-heater.jpg" alt="GC Electric Duct Heaters">
       <h3>GC Electric Duct Heaters</h3>
@@ -215,5 +215,6 @@
   </script>
 </body>
 </html>
+
 
 
