--- a/products.html
+++ b/products.html
@@ -95,7 +95,7 @@
 
     <!-- 3  GEC Electric Duct Heaters -->
     <div class="card">
-      <img src="gc-duct-heater.jpg" alt="GC Electric Duct Heaters">
+      <img src="gc-duct-heater.jpg" alt="GEC Electric Duct Heaters">
       <h3>GC Electric Duct Heaters</h3>
       <ul>
         <li>Manufactured to international standards</li>
@@ -215,6 +215,7 @@
   </script>
 </body>
 </html>
+
 
 
 
