--- a/products.html
+++ b/products.html
@@ -96,7 +96,7 @@
     <!-- 3  GEC Electric Duct Heaters -->
     <div class="card">
       <img src="gc-duct-heater.jpg" alt="GEC Electric Duct Heaters">
-      <h3>GC Electric Duct Heaters</h3>
+      <h3>GEC Electric Duct Heaters</h3>
       <ul>
         <li>Manufactured to international standards</li>
         <li>Slipped-in finned tubular type</li>
@@ -215,6 +215,7 @@
   </script>
 </body>
 </html>
+
 
 
 
