Update logo image source in products.html
Updated logo image source in header and ensured HTML structure is consistent.

--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
       <nav>
         <div class="brand">
           <!--  logo  -->
-          <img src="logo.jpg" alt="Green Spark">
+          <img src="gslogo.jpg" alt="Green Spark">
           <span>Green Spark</span>
         </div>
         <ul>
@@ -215,6 +215,7 @@
   </script>
 </body>
 </html>
+
 
 
 
